--- a/clase3/estilos.css
+++ b/clase3/estilos.css
@@ -58,6 +58,14 @@ body {
   font-size: 1.4rem;
 }
 
+.texto1 a:hover {
+  text-decoration: none;
+  color: red;
+  font-weight: 800;
+  padding: 3rem;
+  font-size: 1.4rem;
+}
+
 .encabezado {
   background-image: url(./imagenes/cabeza.jpg);
   background-color: black;
