--- a/clase3/estilos.css
+++ b/clase3/estilos.css
@@ -2,8 +2,10 @@
   margin: 0;
   padding: 0;
 }
-
-body {
+.general {
+background-color: beige;
+}
+.body {
   color: aqua;
 }
 
@@ -73,7 +75,7 @@ body {
   background-size: cover;
   background-position: center;
   padding: 2rem;
-  height: 30vh;
+  height: 10vh;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -87,7 +89,7 @@ body {
 }
 
 .box_model { 
-  background-color: beige;
+  background-color: blue;
   width: 250px;
   height: 150px;
   padding-top: 10px;
@@ -97,4 +99,8 @@ body {
   margin: 20px 30px 40px 50px ; /*sentido agujas del reloj*/
   overflow: auto;
   border: dotted 5px red;
+}
+
+.box_model p {
+  color: white;
 }
