--- a/clase8/estilos.css
+++ b/clase8/estilos.css
@@ -290,6 +290,8 @@ height: 100vh;
 .nombre_perfil:hover {
   color: rgb(122, 96, 28);
   transform: scale(1.3);
+  animation: heartBeat; 
+  animation-duration: 0.8s; 
 }
 
 .descripcion_de_perfil {
@@ -301,10 +303,10 @@ height: 100vh;
 
 .descripcion_de_perfil:hover {
   color: #ffda79;
-  transform: scale(1.2);
+  /* animation: zoomIn;
+  animation-duration: 0.8s; */
+  transform: scale(1.3);
 }
-
-
 
 
   
