--- a/clase17-js/estilos.css
+++ b/clase17-js/estilos.css
@@ -1,8 +1,13 @@
-.colorTitulo{
+/* .colorTitulo{
     color: red;
 }
 
 .fuenteParra{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
+} */
+
+.adoptada{
+    text-decoration: line-through;
+    color: blueviolet;
+  }
 
