--- a/proy-js-bootstrap/estilos.css
+++ b/proy-js-bootstrap/estilos.css
@@ -1,11 +1,27 @@
 .principal {
     background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
 }
+
+.contenido {
+    flex: 1;
+}
+
 footer {
-    position: fixed;
+    height: 2rem;
     bottom: 0;
     width: 100%;
-    background-color: #343a40; 
-    color: #ffffff; 
-    text-align: center; 
+    background-color: #343a40;
+    color: #ffffff;
+    text-align: center;
+}
+
+.titulo {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: black;
+    text-align: center;
+    padding: 1rem;
 }
